Primeiro push Thalessa

--- a/RotinasDeLimpezaDaBaseDeDados.ipynb
+++ b/RotinasDeLimpezaDaBaseDeDados.ipynb
@@ -5,8 +5,6 @@
     "colab": {
       "name": "RotinasDeLimpezaDaBaseDeDados.ipynb",
       "provenance": [],
-      "mount_file_id": "1ilIzz0Is67f9kifjOSWNlPsYAAElInMN",
-      "authorship_tag": "ABX9TyOyONY5CVhzylipG+5H1mXZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +36,54 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qq3kCvNZKqEq",
+        "outputId": "488fb1e9-e07d-4b5a-b1d3-da419bbdc750",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Thalessa aqui\n",
+        "arq = open(\"/content/drive/MyDrive/TCC/dados/dicionarios/vogais_duplicadas.csv\",\"r\")\n",
+        "print(arq.read())\n",
+        "arq.close()"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "vogais_duplicadas\n",
+            "enjôo\n",
+            "enjôos\n",
+            "abençôo\n",
+            "perdôo\n",
+            "crêem\n",
+            "dêem\n",
+            "lêem\n",
+            "vêem\n",
+            "relêem\n",
+            "prevêem\n",
+            "voo\n",
+            "voos\n",
+            "enjoo\n",
+            "enjoos\n",
+            "abençoo\n",
+            "perdoo\n",
+            "creem\n",
+            "deem\n",
+            "leem\n",
+            "veem\n",
+            "releem\n",
+            "preveem\n"
+          ]
+        }
+      ]
     }
   ]
 }
