--- a/RotinasDeLimpezaDaBaseDeDados.ipynb
+++ b/RotinasDeLimpezaDaBaseDeDados.ipynb
@@ -39,7 +39,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +90,7 @@
         "!pip install nltk\n",
         "#nltk.download('all-nltk') #Demora um pouco"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +120,7 @@
         "import re\n",
         "import itertools"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +159,7 @@
         "# Lista de vogais duplicadas\n",
         "PATH_LIST_VOGAIS_DUPLICADAS = r\"/content/drive/MyDrive/TCC/dados/dicionarios/vogais_duplicadas.csv\""
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
         "baseTweets = pd.read_csv(PATH_BASE_TESTE_BRUTA, index_col=0)\n",
         "baseTweets.head()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,6 +270,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "baseTweets.shape"
+      ],
+      "metadata": {
+        "id": "4wkzYMsa_LcH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "nXsmpxj_VCxY"
@@ -319,7 +330,7 @@
         "\n",
         "    # Remover tweets marcados como pequenos e remove tweets repetidos(texto idêntico) \n",
         "    baseTweets.drop_duplicates(subset='text_limpo', keep=False, inplace=True)\n",
-        "    baseTweets.reset_index(inplace=True)\n",
+        "    #baseTweets.reset_index(inplace=True)\n",
         "\n",
         "    # apaga as linhas com o texto = '1'\n",
         "    indexNames = baseTweets[ baseTweets['text_limpo'] == '1' ].index    \n",
@@ -379,7 +390,7 @@
         "        tokens = '1'\n",
         "    return tokens"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -397,7 +408,7 @@
         "pre_processamento(baseTweets['text'])\n",
         "baseTweets.head()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -513,13 +524,24 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "baseTweets.shape"
+      ],
+      "metadata": {
+        "id": "BB4RWsuA_PPG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "yFZz24V3Fecx"
       },
       "source": [
         "baseTweets.to_csv('Base1_Com_StopWords.csv') #Salva base limpa"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -542,7 +564,7 @@
         "Sw = open('/content/drive/MyDrive/TCC/dados/dicionarios/portuguese.txt','r',encoding='utf-8')\n",
         "ptBr_stopwords = Sw.read()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -559,7 +581,7 @@
         "baseTweets['text_cleanStopWords'] = baseTweets['text_limpo'].apply(lambda x: ' '.join([word for word in x.split() if word not in (ptBr_stopwords)]))\n",
         "baseTweets.head()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -677,7 +699,7 @@
       "source": [
         "baseTweets.to_csv('Base2_Sem_StopWords.csv') #Salva base limpa"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     }
   ]
