Melhora no algoritmo de classificação hate not hate

--- a/RotinaDeClassificacaoDaBaseDeDados.ipynb
+++ b/RotinaDeClassificacaoDaBaseDeDados.ipynb
@@ -31,7 +31,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "48rHmBtajC8X",
-        "outputId": "a6a58fe9-e546-4964-d68a-12425bd8bc94",
+        "outputId": "dbc88130-6311-484d-87ec-d069845bfadd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -88,7 +88,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,12 +127,15 @@
       "metadata": {
         "id": "ZsV_6r2Rjh7w"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Padrão RegEx\n",
+        "PADRAO_PALAVRAS_PT = r'[a-zA-Zà-úÀ-Ú0-9]+'\n",
+        "\n",
         "########## PATHS DE ARQUIVOS ##########\n",
         "\n",
         "# Base após pré-processamento COM stopwords (Base 1)\n",
@@ -153,7 +156,7 @@
       "metadata": {
         "id": "EahfFd6Qj3hK"
       },
-      "execution_count": 41,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -166,20 +169,20 @@
       ],
       "metadata": {
         "id": "vuGQ6EzekJD8",
-        "outputId": "69773ba4-8ffd-4bb1-9b2d-4ac38383c350",
+        "outputId": "7098d522-60e2-4326-8e1c-af9c06f88bfd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 337
+          "height": 424
         }
       },
-      "execution_count": 37,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-ac280dc5-9657-4c06-a263-f47ef5fa061c\">\n",
+              "  <div id=\"df-01ebcbeb-f201-460f-b4c9-cdb7a060062a\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -256,7 +259,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ac280dc5-9657-4c06-a263-f47ef5fa061c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-01ebcbeb-f201-460f-b4c9-cdb7a060062a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -307,12 +310,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ac280dc5-9657-4c06-a263-f47ef5fa061c button.colab-df-convert');\n",
+              "          document.querySelector('#df-01ebcbeb-f201-460f-b4c9-cdb7a060062a button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ac280dc5-9657-4c06-a263-f47ef5fa061c');\n",
+              "          const element = document.querySelector('#df-01ebcbeb-f201-460f-b4c9-cdb7a060062a');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -345,7 +348,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 4
         }
       ]
     },
@@ -359,20 +362,20 @@
       ],
       "metadata": {
         "id": "6Yq9b9sZkalp",
-        "outputId": "a80bac87-1f1b-4ce1-ced4-713ce28fae82",
+        "outputId": "ab4a637f-ee4e-4567-a0c6-ba49322bf7e6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 372
+          "height": 615
         }
       },
-      "execution_count": 42,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-084a7761-169f-42ed-9ec0-04e5a173dc75\">\n",
+              "  <div id=\"df-39a16ee0-c2f3-46a2-acb7-3f66bfc1de29\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -455,7 +458,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-084a7761-169f-42ed-9ec0-04e5a173dc75')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-39a16ee0-c2f3-46a2-acb7-3f66bfc1de29')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -506,12 +509,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-084a7761-169f-42ed-9ec0-04e5a173dc75 button.colab-df-convert');\n",
+              "          document.querySelector('#df-39a16ee0-c2f3-46a2-acb7-3f66bfc1de29 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-084a7761-169f-42ed-9ec0-04e5a173dc75');\n",
+              "          const element = document.querySelector('#df-39a16ee0-c2f3-46a2-acb7-3f66bfc1de29');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -544,7 +547,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 5
         }
       ]
     },
@@ -555,12 +558,12 @@
       ],
       "metadata": {
         "id": "YVX0FZ1ik9AI",
-        "outputId": "751a2ffd-a563-4d8c-8b91-a6dcb2a6329c",
+        "outputId": "8a5f674b-1937-44ba-c023-e0e7fa6ec1c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -570,7 +573,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 6
         }
       ]
     },
@@ -581,12 +584,12 @@
       ],
       "metadata": {
         "id": "v4VpeC7IkWko",
-        "outputId": "5a78751c-704d-4b7f-f44b-5127b8ad193f",
+        "outputId": "12adf120-073a-46cc-8f01-8266a6155361",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -596,7 +599,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 7
         }
       ]
     },
@@ -618,20 +621,20 @@
       ],
       "metadata": {
         "id": "TBsc3pnLlDaI",
-        "outputId": "7f8ddb3a-6b76-4b80-d66e-4b6f88c13cc7",
+        "outputId": "b4f61ace-62f4-4c2a-a95d-210e10ac82a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-03042742-f073-42d5-ac3a-24f3151e3f91\">\n",
+              "  <div id=\"df-19100088-05a4-4f01-8cc4-284c8ee9e239\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -678,7 +681,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-03042742-f073-42d5-ac3a-24f3151e3f91')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-19100088-05a4-4f01-8cc4-284c8ee9e239')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -729,12 +732,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-03042742-f073-42d5-ac3a-24f3151e3f91 button.colab-df-convert');\n",
+              "          document.querySelector('#df-19100088-05a4-4f01-8cc4-284c8ee9e239 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-03042742-f073-42d5-ac3a-24f3151e3f91');\n",
+              "          const element = document.querySelector('#df-19100088-05a4-4f01-8cc4-284c8ee9e239');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -765,7 +768,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 8
         }
       ]
     },
@@ -778,8 +781,27 @@
         "  # Labels de retorno\n",
         "  HATE = \"hate\"\n",
         "  NOT_HATE = \"not_hate\"\n",
+        "\n",
+        "  # Tokeniza o tweet  \n",
+        "  tokenizer = RegexpTokenizer(PADRAO_PALAVRAS_PT)\n",
+        "  tokens = tokenizer.tokenize(tweet)\n",
         "  \n",
-        "  for palavra_hate in dict_hate['hatelist']:\n",
+        "  hatelist = list(dict_hate['hatelist'])\n",
+        "  hatelist_expressoes = []\n",
+        "\n",
+        "  # Gera lista de expressões\n",
+        "  for termo in hatelist:\n",
+        "    termo_tokens = tokenizer.tokenize(termo)\n",
+        "    if(len(termo_tokens)>1): #expressoes\n",
+        "      hatelist_expressoes.append(termo)\n",
+        "\n",
+        "  # Verifica se o tweet possui ao menos uma PALAVRA de hate\n",
+        "  for token in tokens:\n",
+        "    if token in hatelist:\n",
+        "      return HATE\n",
+        "\n",
+        "  # Verifica se o tweet possui ao menos uma EXPRESSÃO de hate\n",
+        "  for palavra_hate in hatelist_expressoes:\n",
         "    result = re.subn(r'^' + palavra_hate + '\\s', palavra_hate + ' ', tweet) # Substitui no início\n",
         "    if(result[1]):\n",
         "      break\n",
@@ -798,7 +820,7 @@
       "metadata": {
         "id": "dBRY1lHdZ3-U"
       },
-      "execution_count": 33,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -810,20 +832,20 @@
       ],
       "metadata": {
         "id": "-xicNfFHfXOH",
-        "outputId": "9aa110ab-166c-4648-c9c6-ba0a4b861312",
+        "outputId": "2c873b58-3cf5-4167-ee50-f52fd9eea798",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 337
+          "height": 493
         }
       },
-      "execution_count": 45,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-43b382d5-d82b-4acf-8d04-95908c3afb50\">\n",
+              "  <div id=\"df-9a433c81-32cf-4e3c-bc91-d277397551ec\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -906,7 +928,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-43b382d5-d82b-4acf-8d04-95908c3afb50')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9a433c81-32cf-4e3c-bc91-d277397551ec')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -957,12 +979,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-43b382d5-d82b-4acf-8d04-95908c3afb50 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9a433c81-32cf-4e3c-bc91-d277397551ec button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-43b382d5-d82b-4acf-8d04-95908c3afb50');\n",
+              "          const element = document.querySelector('#df-9a433c81-32cf-4e3c-bc91-d277397551ec');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -995,7 +1017,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 18
         }
       ]
     },
@@ -1008,7 +1030,7 @@
       "metadata": {
         "id": "uxHr2_RhgEDM"
       },
-      "execution_count": 46,
+      "execution_count": 19,
       "outputs": []
     }
   ]
