--- a/Treinamento_CNN.ipynb
+++ b/Treinamento_CNN.ipynb
@@ -47,15 +47,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_oj5I6fco9eB",
-        "outputId": "96fb88b1-2ed7-42d9-a03d-74fb0ef2dff5"
+        "outputId": "fc9689fe-9d0e-4139-8c54-89dd39f9d346"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -65,6 +65,9 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
+        "from numpy import array\n",
+        "from numpy import asarray\n",
+        "from numpy import zeros\n",
         "import string, re\n",
         "import itertools\n",
         "import nltk\n",
@@ -97,9 +100,9 @@
           "height": 17
         },
         "id": "YYGxUH68sUuH",
-        "outputId": "a99770d3-082a-4ee9-8d88-02e7deeb9f6a"
+        "outputId": "9a7a9994-c816-4f95-98fd-9b35e265ec9a"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -154,12 +157,12 @@
       "metadata": {
         "id": "W6LWWnwVpLVQ"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "YxMcfFGUMqoD"
       },
@@ -171,14 +174,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
         },
         "id": "aiuYPDsqbeqQ",
-        "outputId": "cc276175-d231-42a0-ad5f-61997a8a499b"
+        "outputId": "bfcb7d64-ae10-432e-b5fe-f1ed8d7ca7fc"
       },
       "outputs": [
         {
@@ -192,7 +195,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3ce16ca5-80bf-495f-9d47-483b7768ea5e\">\n",
+              "  <div id=\"df-d6733f93-5b4e-47d7-9199-ccbd45cc8570\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -231,7 +234,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3ce16ca5-80bf-495f-9d47-483b7768ea5e')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d6733f93-5b4e-47d7-9199-ccbd45cc8570')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -282,12 +285,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3ce16ca5-80bf-495f-9d47-483b7768ea5e button.colab-df-convert');\n",
+              "          document.querySelector('#df-d6733f93-5b4e-47d7-9199-ccbd45cc8570 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3ce16ca5-80bf-495f-9d47-483b7768ea5e');\n",
+              "          const element = document.querySelector('#df-d6733f93-5b4e-47d7-9199-ccbd45cc8570');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -310,7 +313,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
         }
       ],
       "source": [
@@ -320,13 +323,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "aPgAzmA4WwyS",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ae9cae51-b64d-4215-d0d7-49e539cd60c6"
+        "outputId": "bae456cf-3691-4cd6-ddba-efd69c87eab9"
       },
       "outputs": [
         {
@@ -337,7 +340,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ],
       "source": [
@@ -357,9 +360,9 @@
           "height": 424
         },
         "id": "tBQcKJj4ohQ4",
-        "outputId": "b082cf15-c6ff-4e8b-cd23-0d4ad6f04f87"
+        "outputId": "0fb5ef9c-7081-4979-fabb-896e3b2c601b"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -382,7 +385,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b3bf8664-7360-46bb-b8ee-d70787056830\">\n",
+              "  <div id=\"df-98fa71a5-a15b-444e-8264-de943afdf2a6\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -466,7 +469,7 @@
               "</table>\n",
               "<p>21725 rows × 2 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b3bf8664-7360-46bb-b8ee-d70787056830')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-98fa71a5-a15b-444e-8264-de943afdf2a6')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -517,12 +520,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b3bf8664-7360-46bb-b8ee-d70787056830 button.colab-df-convert');\n",
+              "          document.querySelector('#df-98fa71a5-a15b-444e-8264-de943afdf2a6 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b3bf8664-7360-46bb-b8ee-d70787056830');\n",
+              "          const element = document.querySelector('#df-98fa71a5-a15b-444e-8264-de943afdf2a6');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -545,13 +548,13 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "uMzd9gmZYY0Z"
       },
@@ -585,13 +588,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "k2exHJsoYekL",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5ded6241-9fd7-480a-e9f8-cc5ab4254265"
+        "outputId": "35ba85a5-4ba4-435e-868c-0c6399994881"
       },
       "outputs": [
         {
@@ -602,7 +605,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 10
         }
       ],
       "source": [
@@ -624,15 +627,15 @@
       "metadata": {
         "id": "v7U-59d_Kppj"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "1DKJnw1abd79",
-        "outputId": "6157f608-bda0-4a7d-8551-dcd8245db05b",
+        "outputId": "89634b10-c7e4-486f-e259-1ecbebb032f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
@@ -650,7 +653,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-44f7e795-6889-4e20-8be0-f748230889cf\">\n",
+              "  <div id=\"df-f068ee31-ab14-4b8a-9ef5-7bb3b8accd48\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -689,7 +692,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-44f7e795-6889-4e20-8be0-f748230889cf')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f068ee31-ab14-4b8a-9ef5-7bb3b8accd48')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -740,12 +743,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-44f7e795-6889-4e20-8be0-f748230889cf button.colab-df-convert');\n",
+              "          document.querySelector('#df-f068ee31-ab14-4b8a-9ef5-7bb3b8accd48 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-44f7e795-6889-4e20-8be0-f748230889cf');\n",
+              "          const element = document.querySelector('#df-f068ee31-ab14-4b8a-9ef5-7bb3b8accd48');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -787,9 +790,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QN8zzra54iMy",
-        "outputId": "cd5d1016-eb31-4767-8dc7-fbbbb5ac0151"
+        "outputId": "febbd50e-48b5-4137-e385-d48b609ac0d4"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -806,17 +809,18 @@
     {
       "cell_type": "code",
       "source": [
-        "quantidade_palavras_unicas = len( list ( trainDF['text'].str.split(' ', expand=True).stack().unique() ) )\n",
+        "palavras_unicas = list ( trainDF['text'].str.split(' ', expand=True).stack().unique() ) \n",
+        "quantidade_palavras_unicas = len( palavras_unicas )\n",
         "quantidade_palavras_unicas"
       ],
       "metadata": {
         "id": "UhOYgOU8EN6R",
-        "outputId": "3433c9e5-7514-48d0-8119-d2213ddfa207",
+        "outputId": "2c6f28c3-a8c3-40bd-ad82-a9103af52cb3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -832,11 +836,79 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Filtra Embeddings"
+      ],
+      "metadata": {
+        "id": "q9w7_brIERUn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def monta_linha(palavra, coeficientes):\n",
+        "    # Monta a linha com palavra _ coeficientes.\n",
+        "    \n",
+        "    linha = f'{palavra}'\n",
+        "    for coef in coeficientes:\n",
+        "        linha += f' {coef:.5f}'\n",
+        "    linha += '\\n'\n",
+        "    \n",
+        "    return linha\n",
+        "    "
+      ],
+      "metadata": {
+        "id": "oRQJ__8jKzSR"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "embeddings_index = dict()\n",
+        "with open('/content/drive/MyDrive/Colab Notebooks/cbow300Filtratoteste.txt', 'w') as arquivo:\n",
+        "  f = open('/content/drive/MyDrive/TCC/dados/word_embeddings/cbow_s300-002.txt', encoding='utf-8')\n",
+        "\n",
+        "  for line in f:\n",
+        "      values = line.split()\n",
+        "      palavra = values[0]\n",
+        "      if (palavra in palavras_unicas):\n",
+        "          coefs = asarray(values[1:], dtype='float32')\n",
+        "          string = monta_linha(palavra,coefs)\n",
+        "          arquivo.write\n",
+        "          (\n",
+        "              f\"{string}\\n\"\n",
+        "          )\n",
+        "         \n",
+        "  f.close()\n",
+        "  print(embeddings_index)"
+      ],
+      "metadata": {
+        "id": "2IZu07S6EVP_",
+        "outputId": "ac1a93fd-a8f6-42a8-e158-0198ea4104be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "TuzhOW-tx5ek"
       },
       "source": [
-        "# word embeddings"
+        "# Word embeddings"
       ]
     },
     {
@@ -906,24 +978,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Rq5oB-liw2yA",
-        "outputId": "4d1ccbd1-d7db-4ca3-eb6f-94b0baeac916"
+        "id": "Rq5oB-liw2yA"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "9147"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 20
-        }
-      ],
+      "outputs": [],
       "source": [
         "tam= len(word_index)\n",
         "tam"
@@ -1077,41 +1134,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "20ODtGE3xw3H",
-        "outputId": "a28d4c56-0d8e-4545-9991-7364ba6caf3e"
+        "id": "20ODtGE3xw3H"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1/10\n",
-            "107/107 [==============================] - 1s 6ms/step - loss: 0.2845 - acc: 0.5015 - mae: 0.4946\n",
-            "Epoch 2/10\n",
-            "107/107 [==============================] - 1s 7ms/step - loss: 0.2700 - acc: 0.4895 - mae: 0.5030\n",
-            "Epoch 3/10\n",
-            "107/107 [==============================] - 1s 6ms/step - loss: 0.2590 - acc: 0.5003 - mae: 0.4995\n",
-            "Epoch 4/10\n",
-            "107/107 [==============================] - 1s 6ms/step - loss: 0.2562 - acc: 0.5015 - mae: 0.4988\n",
-            "Epoch 5/10\n",
-            "107/107 [==============================] - 1s 7ms/step - loss: 0.2553 - acc: 0.5067 - mae: 0.5000\n",
-            "Epoch 6/10\n",
-            "107/107 [==============================] - 1s 6ms/step - loss: 0.2519 - acc: 0.5190 - mae: 0.4969\n",
-            "Epoch 7/10\n",
-            "107/107 [==============================] - 1s 6ms/step - loss: 0.2510 - acc: 0.5278 - mae: 0.4970\n",
-            "Epoch 8/10\n",
-            "107/107 [==============================] - 1s 6ms/step - loss: 0.2522 - acc: 0.5164 - mae: 0.4986\n",
-            "Epoch 9/10\n",
-            "107/107 [==============================] - 1s 6ms/step - loss: 0.2527 - acc: 0.5003 - mae: 0.4997\n",
-            "Epoch 10/10\n",
-            "107/107 [==============================] - 1s 7ms/step - loss: 0.2501 - acc: 0.5123 - mae: 0.4973\n",
-            "CNN, Word Embeddings - accuracy 0.4918144611186903\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "classifier = create_cnn()\n",
         "accuracyCNN = train_model(classifier,train_seq_x, train_y, valid_seq_x, is_neural_net=True)\n",
