--- a/RotinaDeClassificacaoDaBaseDeDados.ipynb
+++ b/RotinaDeClassificacaoDaBaseDeDados.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "48rHmBtajC8X",
         "outputId": "cbaa10ea-53c8-4045-cc58-4cafc9dc1057",
@@ -128,7 +128,7 @@
       "metadata": {
         "id": "ZsV_6r2Rjh7w"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +160,7 @@
       "metadata": {
         "id": "EahfFd6Qj3hK"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +179,7 @@
           "height": 206
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +340,7 @@
           "height": 206
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -497,7 +497,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -523,7 +523,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -561,7 +561,7 @@
           "height": 206
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -721,7 +721,7 @@
         "id": "kvlph54F8Kr_",
         "outputId": "e740c2f4-8abe-4bab-fb5d-0bc732fbf365"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -912,7 +912,7 @@
       "metadata": {
         "id": "dBRY1lHdZ3-U"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -931,7 +931,7 @@
           "height": 206
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1265,7 +1265,7 @@
         "id": "Tvu_gna84OKm",
         "outputId": "f42d989f-f97a-4f6a-8d58-0101d040ad31"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1624,7 +1624,7 @@
       "metadata": {
         "id": "tiOhFx0rZ9_J"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1640,7 +1640,7 @@
           "height": 424
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2052,22 +2052,233 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# Salva a base1\n",
-        "base1.to_csv(\"/content/drive/MyDrive/TCC/dados/processadas/Base1_classificada.csv\") "
+        "# Definições balanceamento\n"
       ],
       "metadata": {
-        "id": "nktvGWEUDsAU"
+        "id": "EG9SJEhg16tg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uMzd9gmZYY0Z"
       },
-      "execution_count": 15,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "categorias_desejadas = ['hate', 'not_hate'] # !!!\n",
+        "\n",
+        "def balanceia_dados(df, verbose=0):\n",
+        "    # Esta funcao recebe um dataframe original e retorna um dataset\n",
+        "    # contendo um numero igual de noticias das categorias\n",
+        "    # por simplicidade, vou supor que são somente duas categorias.\n",
+        "    global categorias_desejadas\n",
+        "    df_balanceado = df.copy()\n",
+        "    \n",
+        "    # cria um dataframe para cada classe. Assim podemos remover o excesso\n",
+        "    df_F = df_balanceado.loc[df_balanceado.label == categorias_desejadas[0]]\n",
+        "    df_T = df_balanceado.loc[df_balanceado.label == categorias_desejadas[1]]\n",
+        "\n",
+        "    num_amostras_F, num_amostras_T = df_F.shape[0], df_T.shape[0]\n",
+        "    num_amostras_a_remover = abs(num_amostras_F - num_amostras_T)\n",
+        "    \n",
+        "    # remove amostras da classe majoritaria\n",
+        "    if num_amostras_F > num_amostras_T:\n",
+        "        #print(df_F[:num_amostras_a_remover)\n",
+        "        df_F = df_F[num_amostras_a_remover:]\n",
+        "        \n",
+        "    elif num_amostras_T > num_amostras_F:\n",
+        "        #\n",
+        "        df_T = df_T[num_amostras_a_remover:]\n",
+        "\n",
+        "    return pd.concat([df_F, df_T])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Balanceia BASE 1"
+      ],
+      "metadata": {
+        "id": "ZGVXXRHq0jFX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aiuYPDsqbeqQ"
+      },
+      "outputs": [],
+      "source": [
+        "# Agrupa dados por label\n",
+        "base1.groupby('label').count()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aPgAzmA4WwyS"
+      },
+      "outputs": [],
+      "source": [
+        "df_filtrado1 = base1[base1.label.isin(categorias_desejadas)]\n",
+        "df_filtrado1.shape"
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Salva a base2\n",
-        "base2.to_csv(\"/content/drive/MyDrive/TCC/dados/processadas/Base2_classificada.csv\")"
+        "df_filtrado1"
+      ],
+      "metadata": {
+        "id": "tBQcKJj4ohQ4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "k2exHJsoYekL"
+      },
+      "outputs": [],
+      "source": [
+        "# Aplica função de balancear os dados\n",
+        "dataBC1 = balanceia_dados(df_filtrado1)\n",
+        "\n",
+        "# DATA BALANCEADO\n",
+        "dataBC1.reset_index(drop=True, inplace=True) # reseta index\n",
+        "dataBC1.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# convert output  hate =1 not_hate =0\n",
+        "dataBC1.label = [1 if each == \"hate\" else 0 for each in dataBC1.label] "
+      ],
+      "metadata": {
+        "id": "v7U-59d_Kppj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "1DKJnw1abd79"
+      },
+      "outputs": [],
+      "source": [
+        "dataBC1.groupby('label').count()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Salva a base1 classificada e balanceada\n",
+        "base1.to_csv(\"/content/drive/MyDrive/TCC/dados/processadas/Base1_classificada_balanceada.csv\") "
+      ],
+      "metadata": {
+        "id": "nktvGWEUDsAU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Balanceia BASE 2"
+      ],
+      "metadata": {
+        "id": "8zMGpg7G1OZE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uKRb93sk1OZG"
+      },
+      "outputs": [],
+      "source": [
+        "# Agrupa dados por label\n",
+        "base2.groupby('label').count()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "xkbdIrUV1OZI"
+      },
+      "outputs": [],
+      "source": [
+        "df_filtrado2 = base2[base2.label.isin(categorias_desejadas)]\n",
+        "df_filtrado2.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_filtrado2"
+      ],
+      "metadata": {
+        "id": "Lznf9oqL1OZK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "jHg4CZtt1OZN"
+      },
+      "outputs": [],
+      "source": [
+        "# Aplica função de balancear os dados\n",
+        "dataBC2 = balanceia_dados(df_filtrado2)\n",
+        "\n",
+        "# DATA BALANCEADO\n",
+        "dataBC2.reset_index(drop=True, inplace=True) # reseta index\n",
+        "dataBC2.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# convert output  hate =1 not_hate =0\n",
+        "dataBC2.label = [1 if each == \"hate\" else 0 for each in dataBC2.label] "
+      ],
+      "metadata": {
+        "id": "uXyM6IA21OZO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "nDwc0JVm1OZP"
+      },
+      "outputs": [],
+      "source": [
+        "dataBC2.groupby('label').count()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Salva a base2 classificada e balanceada\n",
+        "base2.to_csv(\"/content/drive/MyDrive/TCC/dados/processadas/Base2_classificada_balanceada.csv\")"
       ],
       "metadata": {
         "id": "7tBQguVR8p_o"
