--- a/RotinaDeClassificacaoDaBaseDeDados.ipynb
+++ b/RotinaDeClassificacaoDaBaseDeDados.ipynb
@@ -2183,7 +2183,7 @@
       "cell_type": "code",
       "source": [
         "# Salva a base1 classificada e balanceada\n",
-        "base1.to_csv(\"/content/drive/MyDrive/TCC/dados/processadas/Base1_classificada_balanceada.csv\") "
+        "dataBC1.to_csv(\"/content/drive/MyDrive/TCC/dados/processadas/Base1_classificada_balanceada.csv\") "
       ],
       "metadata": {
         "id": "nktvGWEUDsAU"
@@ -2278,7 +2278,7 @@
       "cell_type": "code",
       "source": [
         "# Salva a base2 classificada e balanceada\n",
-        "base2.to_csv(\"/content/drive/MyDrive/TCC/dados/processadas/Base2_classificada_balanceada.csv\")"
+        "dataBC2.to_csv(\"/content/drive/MyDrive/TCC/dados/processadas/Base2_classificada_balanceada.csv\")"
       ],
       "metadata": {
         "id": "7tBQguVR8p_o"
