Alterado max_len

--- a/Treinamento_CNN.ipynb
+++ b/Treinamento_CNN.ipynb
@@ -47,7 +47,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_oj5I6fco9eB",
-        "outputId": "24a84cb6-d41d-4bf7-ca7b-be4352b68f25"
+        "outputId": "74fec74d-ce2d-45d7-c0a5-326fa330baba"
       },
       "execution_count": 1,
       "outputs": [
@@ -100,7 +100,7 @@
           "height": 17
         },
         "id": "YYGxUH68sUuH",
-        "outputId": "8048e01a-83b9-48b9-ac29-ed332d596d66"
+        "outputId": "ed02e1f8-219c-4747-9f8f-da6e02f47842"
       },
       "execution_count": 2,
       "outputs": [
@@ -157,12 +157,12 @@
       "metadata": {
         "id": "W6LWWnwVpLVQ"
       },
-      "execution_count": 28,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 4,
       "metadata": {
         "id": "YxMcfFGUMqoD"
       },
@@ -174,14 +174,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
         },
         "id": "aiuYPDsqbeqQ",
-        "outputId": "f2d5a624-56e5-422d-bec1-809f23e5e003"
+        "outputId": "383cf8d0-f990-4a1f-ef8f-555ef1693960"
       },
       "outputs": [
         {
@@ -195,7 +195,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ea4f3761-f915-4e11-81b4-1a0e27cff506\">\n",
+              "  <div id=\"df-0cce173a-e71e-455b-8607-157f89d2beb5\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -234,7 +234,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ea4f3761-f915-4e11-81b4-1a0e27cff506')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0cce173a-e71e-455b-8607-157f89d2beb5')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -285,12 +285,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ea4f3761-f915-4e11-81b4-1a0e27cff506 button.colab-df-convert');\n",
+              "          document.querySelector('#df-0cce173a-e71e-455b-8607-157f89d2beb5 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ea4f3761-f915-4e11-81b4-1a0e27cff506');\n",
+              "          const element = document.querySelector('#df-0cce173a-e71e-455b-8607-157f89d2beb5');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -313,7 +313,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 71
+          "execution_count": 5
         }
       ],
       "source": [
@@ -325,7 +325,7 @@
       "cell_type": "code",
       "source": [
         "# Pega a média de caracteres dos tweets de toda a base\n",
-        "average_len = int(trainDF['text'].apply(lambda x: len(str(x))).mean())\n",
+        "average_len = int(trainDF['text'].apply(lambda x: len(str(x).split(' '))).mean())\n",
         "average_len"
       ],
       "metadata": {
@@ -333,19 +333,47 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QN8zzra54iMy",
-        "outputId": "9552e578-85de-4d8f-d5c4-f3711429efb6"
+        "outputId": "38185ecd-56f7-4ffa-ff4b-246953c28e43"
       },
-      "execution_count": 72,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "62"
+              "10"
             ]
           },
           "metadata": {},
-          "execution_count": 72
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pega a média de caracteres dos tweets de toda a base\n",
+        "max_len = int(trainDF['text'].apply(lambda x: len(str(x).split(' '))).max())\n",
+        "max_len"
+      ],
+      "metadata": {
+        "id": "5ZWXjrkH1HK5",
+        "outputId": "adf1e11d-25b4-4e88-eca0-fc180cd4bec9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "25"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
         }
       ]
     },
@@ -358,12 +386,12 @@
       ],
       "metadata": {
         "id": "UhOYgOU8EN6R",
-        "outputId": "35110696-a6fc-4c06-9760-b0483d27ed26",
+        "outputId": "dd171630-c76b-41b1-ffe1-ae1842583d9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 73,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -373,7 +401,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 73
+          "execution_count": 55
         }
       ]
     },
@@ -391,15 +419,16 @@
       "source": [
         "# word level tf-idf\n",
         "# td-idf gera matriz com 9140 colunas (4 palavras estão sendo perdidas ao usar o regex \\w{1,})\n",
-        "tfidf_vect = TfidfVectorizer(analyzer='word', token_pattern=r'\\w{1,}', max_features= quantidade_palavras_unicas)\n",
-        "X = tfidf_vect.fit_transform(trainDF['text'])\n",
+        "# tfidf_vect = TfidfVectorizer(analyzer='word', token_pattern=r'\\w{1,}', max_features= quantidade_palavras_unicas)\n",
+        "# X = tfidf_vect.fit_transform(trainDF['text'])\n",
         "\n",
-        "train_x, valid_x, train_y, valid_y = model_selection.train_test_split(X, trainDF['label'], test_size=0.3, random_state=2)"
+        "# train_x, valid_x, train_y, valid_y = model_selection.train_test_split(X, trainDF['label'], test_size=0.3, random_state=2)\n",
+        "# Não conseguimos usar o c-bow300"
       ],
       "metadata": {
         "id": "8uLpWFP05veb"
       },
-      "execution_count": 125,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -415,20 +444,20 @@
       "metadata": {
         "id": "JZqSl5-fzg5e"
       },
-      "execution_count": 126,
+      "execution_count": 58,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# convert text to sequence of tokens and pad them to ensure equal length vectors \n",
-        "train_seq_x = sequence.pad_sequences(token.texts_to_sequences(train_x_text), maxlen=average_len)\n",
-        "valid_seq_x = sequence.pad_sequences(token.texts_to_sequences(valid_x_text), maxlen=average_len)"
+        "train_seq_x = sequence.pad_sequences(token.texts_to_sequences(train_x_text), maxlen=max_len)\n",
+        "valid_seq_x = sequence.pad_sequences(token.texts_to_sequences(valid_x_text), maxlen=max_len)"
       ],
       "metadata": {
         "id": "Xy5zX1RIzZ9A"
       },
-      "execution_count": 127,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -438,22 +467,22 @@
       ],
       "metadata": {
         "id": "oBf9G-kl2qWm",
-        "outputId": "83cd13d3-43ef-4a1e-ea10-0aa969de2e26",
+        "outputId": "9299a15d-5f36-4694-db27-133a456cd563",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 128,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(3420, 62)"
+              "(3420, 25)"
             ]
           },
           "metadata": {},
-          "execution_count": 128
+          "execution_count": 66
         }
       ]
     },
@@ -469,9 +498,9 @@
     {
       "cell_type": "code",
       "source": [
-        "def train_model(classifier, feature_vector_train, label, feature_vector_valid, is_neural_net=False):\n",
+        "def train_model(classifier, feature_vector_train, label, feature_vector_valid, validation, is_neural_net=False):\n",
         "    # fit the training dataset on the classifier\n",
-        "    classifier.fit(feature_vector_train, label, epochs=10) #adicionamos epoca\n",
+        "    classifier.fit(feature_vector_train, label, epochs=15) #adicionamos epoca\n",
         "    \n",
         "    # predict the labels on validation dataset\n",
         "    predictions = classifier.predict(feature_vector_valid)\n",
@@ -479,26 +508,26 @@
         "    if is_neural_net:\n",
         "        predictions = predictions.argmax(axis=-1)\n",
         "    \n",
-        "    return metrics.accuracy_score(predictions, valid_y)"
+        "    return metrics.accuracy_score(predictions, validation)"
       ],
       "metadata": {
         "id": "oinV3GGN22R-"
       },
-      "execution_count": 129,
+      "execution_count": 78,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": 84,
       "metadata": {
         "id": "AHk31johw4MA"
       },
       "outputs": [],
       "source": [
-        "def create_cnn():\n",
+        "def create_cnn(input_size):\n",
         "    # Add an Input Layer\n",
         "    #input_layer = layers.Input((24,))\n",
-        "    input_layer = layers.Input((average_len,1,))\n",
+        "    input_layer = layers.Input((input_size,1,))\n",
         "\n",
         "    input_layer = layers.SpatialDropout1D(0.3)(input_layer)\n",
         "\n",
@@ -521,17 +550,17 @@
         "    # Compile the model\n",
         "    #sgd = optimizers.SGD(lr=0.01, decay=1e-6, momentum=0.9, nesterov=True)\n",
         "    model = models.Model(inputs=input_layer, outputs=output_layer2)\n",
-        "    model.compile(optimizer='sgd', loss='mean_squared_error', metrics = ['acc', 'mae'])\n",
+        "    model.compile(optimizer='adam', loss='mean_squared_error', metrics = ['acc', 'mae'])\n",
         "  \n",
         "    return model"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 85,
       "metadata": {
         "id": "20ODtGE3xw3H",
-        "outputId": "f4a9b5a7-69ce-42f1-f287-bd480f44d660",
+        "outputId": "d2b3c331-70f8-4c51-9072-b0498e8547bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -541,47 +570,47 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/10\n",
-            "107/107 [==============================] - 2s 9ms/step - loss: 0.4875 - acc: 0.5111 - mae: 0.4886\n",
-            "Epoch 2/10\n",
-            "107/107 [==============================] - 1s 8ms/step - loss: 0.4956 - acc: 0.5044 - mae: 0.4958\n",
-            "Epoch 3/10\n",
-            "107/107 [==============================] - 1s 6ms/step - loss: 0.4965 - acc: 0.5035 - mae: 0.4965\n",
-            "Epoch 4/10\n",
-            "107/107 [==============================] - 1s 5ms/step - loss: 0.4965 - acc: 0.5035 - mae: 0.4965\n",
-            "Epoch 5/10\n",
-            "107/107 [==============================] - 1s 5ms/step - loss: 0.4965 - acc: 0.5035 - mae: 0.4965\n",
-            "Epoch 6/10\n",
-            "107/107 [==============================] - 1s 6ms/step - loss: 0.4965 - acc: 0.5035 - mae: 0.4965\n",
-            "Epoch 7/10\n",
-            "107/107 [==============================] - 1s 5ms/step - loss: 0.4965 - acc: 0.5035 - mae: 0.4965\n",
-            "Epoch 8/10\n",
-            "107/107 [==============================] - 1s 5ms/step - loss: 0.4965 - acc: 0.5035 - mae: 0.4965\n",
-            "Epoch 9/10\n",
-            "107/107 [==============================] - 1s 5ms/step - loss: 0.4965 - acc: 0.5035 - mae: 0.4965\n",
-            "Epoch 10/10\n",
-            "107/107 [==============================] - 1s 5ms/step - loss: 0.4964 - acc: 0.5035 - mae: 0.4965\n",
+            "(None, 1)\n",
+            "Epoch 1/15\n",
+            "107/107 [==============================] - 1s 3ms/step - loss: 0.4885 - acc: 0.5082 - mae: 0.4934\n",
+            "Epoch 2/15\n",
+            "107/107 [==============================] - 0s 3ms/step - loss: 0.5043 - acc: 0.4950 - mae: 0.5055\n",
+            "Epoch 3/15\n",
+            "107/107 [==============================] - 0s 4ms/step - loss: 0.5038 - acc: 0.4962 - mae: 0.5041\n",
+            "Epoch 4/15\n",
+            "107/107 [==============================] - 0s 3ms/step - loss: 0.5044 - acc: 0.4956 - mae: 0.5045\n",
+            "Epoch 5/15\n",
+            "107/107 [==============================] - 0s 4ms/step - loss: 0.5044 - acc: 0.4956 - mae: 0.5045\n",
+            "Epoch 6/15\n",
+            "107/107 [==============================] - 0s 4ms/step - loss: 0.5038 - acc: 0.4962 - mae: 0.5039\n",
+            "Epoch 7/15\n",
+            "107/107 [==============================] - 0s 4ms/step - loss: 0.5035 - acc: 0.4965 - mae: 0.5036\n",
+            "Epoch 8/15\n",
+            "107/107 [==============================] - 0s 4ms/step - loss: 0.5029 - acc: 0.4971 - mae: 0.5031\n",
+            "Epoch 9/15\n",
+            "107/107 [==============================] - 0s 3ms/step - loss: 0.5033 - acc: 0.4965 - mae: 0.5034\n",
+            "Epoch 10/15\n",
+            "107/107 [==============================] - 0s 4ms/step - loss: 0.5038 - acc: 0.4962 - mae: 0.5040\n",
+            "Epoch 11/15\n",
+            "107/107 [==============================] - 0s 4ms/step - loss: 0.5038 - acc: 0.4962 - mae: 0.5039\n",
+            "Epoch 12/15\n",
+            "107/107 [==============================] - 0s 4ms/step - loss: 0.5040 - acc: 0.4959 - mae: 0.5041\n",
+            "Epoch 13/15\n",
+            "107/107 [==============================] - 0s 4ms/step - loss: 0.5035 - acc: 0.4965 - mae: 0.5035\n",
+            "Epoch 14/15\n",
+            "107/107 [==============================] - 0s 4ms/step - loss: 0.5035 - acc: 0.4965 - mae: 0.5035\n",
+            "Epoch 15/15\n",
+            "107/107 [==============================] - 0s 4ms/step - loss: 0.5035 - acc: 0.4965 - mae: 0.5035\n",
             "CNN, Word Embeddings - accuracy 0.4918144611186903\n"
           ]
         }
       ],
       "source": [
-        "classifier = create_cnn()\n",
-        "accuracyCNN = train_model(classifier,train_seq_x, train_y, valid_seq_x, is_neural_net=True)\n",
-        "#accuracyCNN = train_model(classifier,train_x, train_y, valid_x, is_neural_net=True)\n",
+        "classifier = create_cnn(max_len)\n",
+        "accuracyCNN = train_model(classifier,train_seq_x, train_y_text, valid_seq_x, valid_y_text, is_neural_net=True)\n",
+        "\n",
         "print (\"CNN, Word Embeddings - accuracy\",  accuracyCNN)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "aPML6zmm5hhN"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
