--- a/RotinasDeLimpezaDaBaseDeDados.ipynb
+++ b/RotinasDeLimpezaDaBaseDeDados.ipynb
@@ -27,6 +27,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Rotinas de Limpeza\n"
+      ],
+      "metadata": {
+        "id": "TS5C7AO_6jmN"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "U8-4D6gHR9cH",
@@ -39,7 +48,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +138,7 @@
         "import re\n",
         "import itertools"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -169,10 +178,9 @@
         "PATH_LIST_VOGAIS_DUPLICADAS = r\"/content/drive/MyDrive/TCC/dados/dicionarios/vogais_duplicadas.csv\"\n",
         "\n",
         "# Lista de stopWords\n",
-        "PATH_LIST_STOP_WORDS_PT_BR = r\"/content/drive/MyDrive/TCC/dados/dicionarios/stop_word_list.csv\"\n",
-        "\n"
+        "PATH_LIST_STOP_WORDS_PT_BR = r\"/content/drive/MyDrive/TCC/dados/dicionarios/stop_word_list.csv\""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -191,7 +199,7 @@
         "#baseTweets = baseTweets.sample(n=1000) #PEGANDO 1000 REGISTROS DA BASE PARA TESTE, REMOVER ISSO DEPOIS\n",
         "baseTweets.head()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -386,7 +394,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +504,7 @@
         "        tokens = '1'\n",
         "    return tokens"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1617,7 +1625,7 @@
       "metadata": {
         "id": "mU5YPDJdmycN"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1635,7 +1643,7 @@
           "height": 337
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1836,7 +1844,7 @@
       "metadata": {
         "id": "S_ea5U7_nnBq"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1852,7 +1860,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1879,7 +1887,7 @@
           "height": 641
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
